--- a/index.html
+++ b/index.html
@@ -49,4 +49,68 @@
     </section>
 
 </body>
-</html>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AKN Editz - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>AKN Editz</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#downloads">Downloads</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="home">
+        <h2>Hi, I'm AKN</h2>
+        <p>A Professional Video & Photo Editor</p>
+        <a href="#portfolio" class="btn">Explore My Work</a>
+    </section>
+
+    <section id="services">
+        <h2>My Services</h2>
+        <ul>
+            <li>✅ Professional Reels Editing</li>
+            <li>✅ Short & Long Video Editing</li>
+            <li>✅ Thumbnail & Banner Design</li>
+            <li>✅ Photoshop Editing</li>
+            <li>✅ Website Design & Development</li>
+            <li>✅ Ethical Hacking & Programming</li>
+            <li>✅ Account Recovery</li>
+        </ul>
+    </section>
+
+    <section id="portfolio">
+        <h2>My Work</h2>
+        <p>Check out my latest edits and projects!</p>
+        <a href="https://www.instagram.com/_akn_editz" target="_blank" class="btn">View Instagram</a>
+    </section>
+
+    <section id="downloads">
+        <h2>Downloads</h2>
+        <p>Coming Soon...</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email: <a href="mailto:anayak8543@gmail.com">anayak8543@gmail.com</a></p>
+        <p>WhatsApp: <a href="https://wa.me/6267624553" target="_blank">6267624553 (Message Only)</a></p>
+    </section>
+
+    <footer>
+        <p>© 2025 AKN Editz. All Rights Reserved.</p>
+    </footer>
+    
+    <script src="script.js"></script>
+</body>
+    </html>
