--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="home">
         <h2>Hi, I'm AKN</h2>
         <p>A Professional Video & Photo Editor</p>
-        <a href="#portfolio" class="btn">Explore My Work</a>
+        <a <a href="https://www.instagram.com/_akn_editz?igsh=bjljNXd5ZmZsZTNn" target="_blank" class="btn">Explore My Work</a> class="btn">Explore My Work</a>
     </section>
 
     <section id="services">
