--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <p>WhatsApp: <a href="https://wa.me/6267624553" target="_blank">6267624553 (Message Only)</a></p>
     </section>
 
+    <a href="https://wa.me/6267624553" class="whatsapp-button" target="_blank">
+    📩 Chat on WhatsApp
+                      </a>
     <footer>
         <p>© 2025 AKN Editz. All Rights Reserved.</p>
     </footer>
