--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header><button id="toggle-theme">🌙 Toggle Dark Mode</button>
         <h1>AKN Editz</h1>
         <nav>
             <ul>
