--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><button id="toggle-theme">🌙 Toggle Dark Mode</button>
+    <header>
+        <button id="toggle-theme">🌙 Toggle Dark Mode</button>
         <h1>AKN Editz</h1>
         <nav>
             <ul>
@@ -40,6 +41,13 @@
     </section>
 
     <section id="portfolio">
+       <section id="testimonials">
+    <h2>What My Clients Say</h2>
+    <div class="testimonial">
+        <p>"Abhishek's editing skills are top-notch! Highly recommended!"</p>
+        <h4>- John Doe, USA</h4>
+    </div>
+       </section>
         <h2>My Work</h2>
         <p>Check out my latest edits and projects!</p>
         <a href="https://www.instagram.com/_akn_editz" target="_blank" class="btn">View Instagram</a>
