--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <button id="toggle-theme">🌙 Toggle Dark Mode</button>
-        <h1>AKN Editz</h1>
+        <h1 id="typing-text"></h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
