--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
     </section>
 
     <section id="services">
+       <table class="pricing-table">
+    <tr>
+        <th>Service</th>
+        <th>Price</th>
+    </tr>
+    <tr>
+        <td>Reels Editing</td>
+        <td>$20</td>
+    </tr>
+    <tr>
+        <td>Thumbnail Design</td>
+        <td>$10</td>
+    </tr>
+       </table>
         <h2>My Services</h2>
         <ul>
             <li>✅ Professional Reels Editing</li>
