--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
     <a href="https://wa.me/6267624553" class="whatsapp-button" target="_blank">
     📩 Chat on WhatsApp
                       </a>
-    <footer>
+    <footer<form action="#" method="POST">
+    <input type="email" placeholder="Enter your email" required>
+    <button type="submit">Subscribe</button>
+    </form>>
         <p>© 2025 AKN Editz. All Rights Reserved.</p>
     </footer>
     
