--- a/index.html
+++ b/index.html
@@ -55,7 +55,16 @@
     </section>
 
     <section id="portfolio">
-       <section id="testimonials">
+      <div class="portfolio-buttons">
+    <button onclick="filterSelection('all')">All</button>
+    <button onclick="filterSelection('thumbnails')">Thumbnails</button>
+    <button onclick="filterSelection('videos')">Videos</button>
+</div>
+<div class="portfolio-gallery">
+    <div class="portfolio-item thumbnails">Thumbnail Work</div>
+    <div class="portfolio-item videos">Video Editing Work</div>
+</div>
+        <section id="testimonials">
     <h2>What My Clients Say</h2>
     <div class="testimonial">
         <p>"Abhishek's editing skills are top-notch! Highly recommended!"</p>
