--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
     </section>
 
     <section id="downloads">
-        <h2>Downloads</h2>
-        <p>Coming Soon...</p>
+        <a href="https://github.com/Abhisheknayak16/aknedits.com/tree/main/uploads" target="_blank">📥 View All Downloads</a>
     </section>
 
     <section id="contact">
