--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="home">
         <h2>Hi, I'm AKN</h2>
         <p>A Professional Video & Photo Editor</p>
-        <a <a href="https://www.instagram.com/_akn_editz?igsh=bjljNXd5ZmZsZTNn" target="_blank" class="btn">Explore My Work</a> class="btn">Explore My Work</a>
+        <a <a href="https://www.instagram.com/_akn_editz?igsh=bjljNXd5ZmZsZTNn" target="_blank" class="btn">Explore My Work</a> </a>
     </section>
 
     <section id="services">
@@ -35,11 +35,11 @@
     </tr>
     <tr>
         <td>Reels Editing</td>
-        <td>$20</td>
+        <td>$3</td>
     </tr>
     <tr>
         <td>Thumbnail Design</td>
-        <td>$10</td>
+        <td>$5</td>
     </tr>
        </table>
         <h2>My Services</h2>
